# sin

./: .gitignore  Makefile  copilot-sin-demo.cabal  default.nix  demo-copilot.c  demo-copilot.h  demo-copilot.sin  doc.org  hie.yaml  package-lock.json  sin.ino  xzaryb00.txt
demo-arduino-copilot/: Main.hs  demo-arduino-copilot.cabal  sin.ino
demo-copilot/: Main.hs  demo-copilot.cabal  scaffold.c  skeleton.ino
src/: Main.hs
src/arduino-examples/Blink/: Demo.hs
src/arduino-examples/Button/: Demo.hs
src/arduino-examples/EEPROM/: Demo.hs
src/arduino-examples/EEPROMrange/: Demo.hs
src/arduino-examples/Random/: Demo.hs
src/arduino-examples/Robot/: Demo.hs
src/arduino-examples/SerialPort/: Demo.hs
src/arduino-examples/WaterHeater/: Demo.hs
