cabal-version:       2.4

name:                copilot-sin-demo
version:             0.1.0.0
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple

executable sin
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.13 && <4.14
                     , copilot
                     , copilot-c99
                     , copilot-language
                     , copilot-libraries
                     , copilot-theorem
                     , arduino-copilot
