cabal-version:       2.4

name:                demo-arduino-copilot
version:             0.1.0.0
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple

executable demo-arduino-copilot
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
  build-depends:       base >=4.13 && <4.14
                     , copilot
                     , copilot-c99
                     , copilot-language
                     , copilot-libraries
                     , copilot-theorem
                     , arduino-copilot
